Fix for 'jumping' title bar in certain layouts

--- a/web/src/main/resources/public/style/core.css
+++ b/web/src/main/resources/public/style/core.css
@@ -10962,7 +10962,7 @@ div.gadget-zone-chrome-title-bar div.gwt-MenuBar:hover {
 	padding-top: 2px;
 	margin-left: 5px;
 	font-weight: bold;
-	width: 200px;
+	width: 190px;
 	height: 20px;
 	overflow: hidden;
 	text-overflow: ellipsis;
